--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
             <div class="header-left">
                 <div class="header-icon">🚂</div>
                 <div class="header-text">
-                    <h1>Rail Induction Planner</h1>
+                    <h1>Rail Induction Planner(KMRL)</h1>
                     <p>AI-Powered Optimization Engine</p>
+                    <p>Government of Kerala</p>
+
                 </div>
             </div>
             <div class="header-buttons">
